--- a/public/src/css/videos.css
+++ b/public/src/css/videos.css
@@ -89,6 +89,8 @@
     }
 
     &__contents {
+        position: relative;
+        z-index: 90;
         display: flex;
         align-items: center;
         justify-content: space-around;
